--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,7 @@
 <body>
     <h1>Daily Cart</h1>
 
-    <a href="item">Items</a>
+    <a href="home">Home</a>
     <a href="users">Users</a>
-    <a href="orders">Orders</a>
 </body>
 </html>
